// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cli should add Svg prefix to index.js exports staring with number 1`] = `
"export { default as Svg2File } from './2File'
export { default as File } from './File'
"
`;

exports[`cli should not override config with cli defaults 1`] = `
"import * as React from 'react'

const SvgFile = () => (
  <svg width={48} height={1} xmlns=\\"http://www.w3.org/2000/svg\\">
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
)

export default SvgFile

"
`;

exports[`cli should support --index-template in cli 1`] = `
"export { File } from './File'
"
`;

exports[`cli should support --no-index 1`] = `
Array [
  "File.js",
]
`;

exports[`cli should support --prettier-config as file 1`] = `
"import * as React from 'react'

const SvgFile = (props) => (
     <svg width={48} height={1} xmlns=\\"http://www.w3.org/2000/svg\\" {...props}>
          <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
     </svg>
)

export default SvgFile

"
`;

exports[`cli should support --prettier-config as json 1`] = `
"import * as React from 'react'

const SvgFile = (props) => (
     <svg width={48} height={1} xmlns=\\"http://www.w3.org/2000/svg\\" {...props}>
          <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
     </svg>
)

export default SvgFile

"
`;

exports[`cli should support --svgo-config as file 1`] = `
"import * as React from 'react'

const SvgFile = (props) => (
  <svg width={48} height={1} xmlns=\\"http://www.w3.org/2000/svg\\" {...props}>
    <title>{'Rectangle 5'}</title>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
)

export default SvgFile

"
`;

exports[`cli should support --svgo-config as json 1`] = `
"import * as React from 'react'

const SvgFile = (props) => (
  <svg width={48} height={1} xmlns=\\"http://www.w3.org/2000/svg\\" {...props}>
    <title>{'Rectangle 5'}</title>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
)

export default SvgFile

"
`;

exports[`cli should support custom file extension 1`] = `
Array [
  "File.ts",
  "index.ts",
]
`;

exports[`cli should support custom index.js with directory output 1`] = `
"export { File } from './File'
"
`;

exports[`cli should support different filename cases with directory output 1`] = `
Array [
  "CamelCase.js",
  "KebabCase.js",
  "MultipleDashes.js",
  "PascalCase.js",
  "index.js",
]
`;

exports[`cli should support different filename cases with directory output: --filename-case=camel 1`] = `
Array [
  "camelCase.js",
  "index.js",
  "kebabCase.js",
  "multipleDashes.js",
  "pascalCase.js",
]
`;

exports[`cli should support different filename cases with directory output: --filename-case=kebab 1`] = `
Array [
  "camel-case.js",
  "index.js",
  "kebab-case.js",
  "multiple-dashes.js",
  "pascal-case.js",
]
`;

exports[`cli should support different filename cases with directory output: --filename-case=pascal 1`] = `
Array [
  "CamelCase.js",
  "KebabCase.js",
  "MultipleDashes.js",
  "PascalCase.js",
  "index.js",
]
`;

exports[`cli should support stdin filepath 1`] = `
"import * as React from 'react'

const SvgFile = (props) => (
  <svg width={48} height={1} xmlns=\\"http://www.w3.org/2000/svg\\" {...props}>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
)

export default SvgFile

"
`;

exports[`cli should support various args: --expand-props none 1`] = `
"import * as React from 'react'

const SvgFile = () => (
  <svg width={48} height={1} xmlns=\\"http://www.w3.org/2000/svg\\">
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
)

export default SvgFile

"
`;

exports[`cli should support various args: --expand-props start 1`] = `
"import * as React from 'react'

const SvgFile = (props) => (
  <svg {...props} width={48} height={1} xmlns=\\"http://www.w3.org/2000/svg\\">
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
)

export default SvgFile

"
`;

exports[`cli should support various args: --icon 1`] = `
"import * as React from 'react'

const SvgFile = (props) => (
  <svg
    width=\\"1em\\"
    height=\\"1em\\"
    viewBox=\\"0 0 48 1\\"
    xmlns=\\"http://www.w3.org/2000/svg\\"
    {...props}
  >
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
)

export default SvgFile

"
`;

exports[`cli should support various args: --icon 2em 1`] = `
"import * as React from 'react'

const SvgFile = (props) => (
  <svg
    width=\\"2em\\"
    height=\\"2em\\"
    viewBox=\\"0 0 48 1\\"
    xmlns=\\"http://www.w3.org/2000/svg\\"
    {...props}
  >
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
)

export default SvgFile

"
`;

exports[`cli should support various args: --icon 24 1`] = `
"import * as React from 'react'

const SvgFile = (props) => (
  <svg
    width={24}
    height={24}
    viewBox=\\"0 0 48 1\\"
    xmlns=\\"http://www.w3.org/2000/svg\\"
    {...props}
  >
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
)

export default SvgFile

"
`;

exports[`cli should support various args: --jsx-runtime automatic 1`] = `
"const SvgFile = (props) => (
  <svg width={48} height={1} xmlns=\\"http://www.w3.org/2000/svg\\" {...props}>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
)

export default SvgFile

"
`;

exports[`cli should support various args: --jsx-runtime classic-preact 1`] = `
"import { h } from 'preact'

const SvgFile = (props) => (
  <svg width={48} height={1} xmlns=\\"http://www.w3.org/2000/svg\\" {...props}>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
)

export default SvgFile

"
`;

exports[`cli should support various args: --native --expand-props none 1`] = `
"import * as React from 'react'
import Svg, { Path } from 'react-native-svg'

const SvgFile = () => (
  <Svg width={48} height={1} xmlns=\\"http://www.w3.org/2000/svg\\">
    <Path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </Svg>
)

export default SvgFile

"
`;

exports[`cli should support various args: --native --icon 1`] = `
"import * as React from 'react'
import Svg, { Path } from 'react-native-svg'

const SvgFile = (props) => (
  <Svg
    width={24}
    height={24}
    viewBox=\\"0 0 48 1\\"
    xmlns=\\"http://www.w3.org/2000/svg\\"
    {...props}
  >
    <Path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </Svg>
)

export default SvgFile

"
`;

exports[`cli should support various args: --native --ref 1`] = `
"import * as React from 'react'
import Svg, { Path } from 'react-native-svg'
import { forwardRef } from 'react'

const SvgFile = (props, ref) => (
  <Svg
    width={48}
    height={1}
    xmlns=\\"http://www.w3.org/2000/svg\\"
    ref={ref}
    {...props}
  >
    <Path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </Svg>
)

const ForwardRef = forwardRef(SvgFile)
export default ForwardRef

"
`;

exports[`cli should support various args: --native 1`] = `
"import * as React from 'react'
import Svg, { Path } from 'react-native-svg'

const SvgFile = (props) => (
  <Svg width={48} height={1} xmlns=\\"http://www.w3.org/2000/svg\\" {...props}>
    <Path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </Svg>
)

export default SvgFile

"
`;

exports[`cli should support various args: --no-dimensions 1`] = `
"import * as React from 'react'

const SvgFile = (props) => (
  <svg viewBox=\\"0 0 48 1\\" xmlns=\\"http://www.w3.org/2000/svg\\" {...props}>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
)

export default SvgFile

"
`;

exports[`cli should support various args: --no-prettier 1`] = `
"import * as React from \\"react\\";

const SvgFile = props => <svg width={48} height={1} xmlns=\\"http://www.w3.org/2000/svg\\" {...props}><path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" /></svg>;

export default SvgFile;
"
`;

exports[`cli should support various args: --no-svgo 1`] = `
"import * as React from 'react'

const SvgFile = (props) => (
  <svg
    width=\\"48px\\"
    height=\\"1px\\"
    viewBox=\\"0 0 48 1\\"
    xmlns=\\"http://www.w3.org/2000/svg\\"
    xmlnsXlink=\\"http://www.w3.org/1999/xlink\\"
    {...props}
  >
    <title>{'Rectangle 5'}</title>
    <desc>{'Created with Sketch.'}</desc>
    <defs />
    <g id=\\"Page-1\\" stroke=\\"none\\" strokeWidth={1} fill=\\"none\\" fillRule=\\"evenodd\\">
      <g
        id=\\"19-Separator\\"
        transform=\\"translate(-129.000000, -156.000000)\\"
        fill=\\"#063855\\"
      >
        <g id=\\"Controls/Settings\\" transform=\\"translate(80.000000, 0.000000)\\">
          <g id=\\"Content\\" transform=\\"translate(0.000000, 64.000000)\\">
            <g id=\\"Group\\" transform=\\"translate(24.000000, 56.000000)\\">
              <g id=\\"Group-2\\">
                <rect id=\\"Rectangle-5\\" x={25} y={36} width={48} height={1} />
              </g>
            </g>
          </g>
        </g>
      </g>
    </g>
  </svg>
)

export default SvgFile

"
`;

exports[`cli should support various args: --ref 1`] = `
"import * as React from 'react'
import { forwardRef } from 'react'

const SvgFile = (props, ref) => (
  <svg
    width={48}
    height={1}
    xmlns=\\"http://www.w3.org/2000/svg\\"
    ref={ref}
    {...props}
  >
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
)

const ForwardRef = forwardRef(SvgFile)
export default ForwardRef

"
`;

exports[`cli should support various args: --replace-attr-values "#063855=currentColor" 1`] = `
"import * as React from 'react'

const SvgFile = (props) => (
  <svg width={48} height={1} xmlns=\\"http://www.w3.org/2000/svg\\" {...props}>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"currentColor\\" fillRule=\\"evenodd\\" />
  </svg>
)

export default SvgFile

"
`;

exports[`cli should support various args: --svg-props "hidden={true},id=hello" 1`] = `
"import * as React from 'react'

const SvgFile = (props) => (
  <svg
    width={48}
    height={1}
    xmlns=\\"http://www.w3.org/2000/svg\\"
    hidden={true}
    id=\\"hello\\"
    {...props}
  >
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
)

export default SvgFile

"
`;

exports[`cli should support various args: --title-prop 1`] = `
"import * as React from 'react'

const SvgFile = ({ title, titleId, ...props }) => (
  <svg
    width={48}
    height={1}
    xmlns=\\"http://www.w3.org/2000/svg\\"
    aria-labelledby={titleId}
    {...props}
  >
    {title ? <title id={titleId}>{title}</title> : null}
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
)

export default SvgFile

"
`;

exports[`cli should support various args: --typescript --ref --title-prop 1`] = `
"import * as React from 'react'
import { SVGProps, Ref, forwardRef } from 'react'
interface SVGRProps {
  title?: string;
  titleId?: string;
}

const SvgFile = (
  { title, titleId, ...props }: SVGProps<SVGSVGElement> & SVGRProps,
  ref: Ref<SVGSVGElement>,
) => (
  <svg
    width={48}
    height={1}
    xmlns=\\"http://www.w3.org/2000/svg\\"
    ref={ref}
    aria-labelledby={titleId}
    {...props}
  >
    {title ? <title id={titleId}>{title}</title> : null}
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
)

const ForwardRef = forwardRef(SvgFile)
export default ForwardRef

"
`;

exports[`cli should support various args: --typescript --ref 1`] = `
"import * as React from 'react'
import { SVGProps, Ref, forwardRef } from 'react'

const SvgFile = (props: SVGProps<SVGSVGElement>, ref: Ref<SVGSVGElement>) => (
  <svg
    width={48}
    height={1}
    xmlns=\\"http://www.w3.org/2000/svg\\"
    ref={ref}
    {...props}
  >
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
)

const ForwardRef = forwardRef(SvgFile)
export default ForwardRef

"
`;

exports[`cli should support various args: --typescript 1`] = `
"import * as React from 'react'
import { SVGProps } from 'react'

const SvgFile = (props: SVGProps<SVGSVGElement>) => (
  <svg width={48} height={1} xmlns=\\"http://www.w3.org/2000/svg\\" {...props}>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
)

export default SvgFile

"
`;

exports[`cli should suppress output when transforming a directory with a --silent option 1`] = `""`;

exports[`cli should transform a whole directory and output relative destination paths 1`] = `
"
__fixtures__/cased/pascalcase.svg -> __fixtures_build__/whole/cased/pascalcase.js
__fixtures__/cased/camelcase.svg -> __fixtures_build__/whole/cased/camelcase.js
__fixtures__/cased/kebab-case.svg -> __fixtures_build__/whole/cased/kebabcase.js
__fixtures__/cased/multiple---dashes.svg -> __fixtures_build__/whole/cased/multipledashes.js
__fixtures__/complex/skype.svg -> __fixtures_build__/whole/complex/skype.js
__fixtures__/complex/telegram.svg -> __fixtures_build__/whole/complex/telegram.js
__fixtures__/nesting/a/c/three.svg -> __fixtures_build__/whole/nesting/a/c/three.js
__fixtures__/nesting/a/two.svg -> __fixtures_build__/whole/nesting/a/two.js
__fixtures__/nesting/one.svg -> __fixtures_build__/whole/nesting/one.js
__fixtures__/numeric/2.file.svg -> __fixtures_build__/whole/numeric/2file.js
__fixtures__/numeric/file.svg -> __fixtures_build__/whole/numeric/file.js
__fixtures__/simple/file.svg -> __fixtures_build__/whole/simple/file.js
__fixtures__/withprettierrc/file.svg -> __fixtures_build__/whole/withprettierrc/file.js
__fixtures__/withsvgoconfig/file.svg -> __fixtures_build__/whole/withsvgoconfig/file.js
__fixtures__/withsvgrrc/file.svg -> __fixtures_build__/whole/withsvgrrc/file.js"
`;

exports[`cli should transform a whole directory with --typescript 1`] = `
"
__fixtures__/cased/pascalcase.svg -> __fixtures_build__/whole/cased/pascalcase.tsx
__fixtures__/cased/camelcase.svg -> __fixtures_build__/whole/cased/camelcase.tsx
__fixtures__/cased/kebab-case.svg -> __fixtures_build__/whole/cased/kebabcase.tsx
__fixtures__/cased/multiple---dashes.svg -> __fixtures_build__/whole/cased/multipledashes.tsx
__fixtures__/complex/skype.svg -> __fixtures_build__/whole/complex/skype.tsx
__fixtures__/complex/telegram.svg -> __fixtures_build__/whole/complex/telegram.tsx
__fixtures__/nesting/a/c/three.svg -> __fixtures_build__/whole/nesting/a/c/three.tsx
__fixtures__/nesting/a/two.svg -> __fixtures_build__/whole/nesting/a/two.tsx
__fixtures__/nesting/one.svg -> __fixtures_build__/whole/nesting/one.tsx
__fixtures__/numeric/2.file.svg -> __fixtures_build__/whole/numeric/2file.tsx
__fixtures__/numeric/file.svg -> __fixtures_build__/whole/numeric/file.tsx
__fixtures__/simple/file.svg -> __fixtures_build__/whole/simple/file.tsx
__fixtures__/withprettierrc/file.svg -> __fixtures_build__/whole/withprettierrc/file.tsx
__fixtures__/withsvgoconfig/file.svg -> __fixtures_build__/whole/withsvgoconfig/file.tsx
__fixtures__/withsvgrrc/file.svg -> __fixtures_build__/whole/withsvgrrc/file.tsx"
`;

exports[`cli should work with a simple file 1`] = `
"import * as React from 'react'

const SvgFile = (props) => (
  <svg width={48} height={1} xmlns=\\"http://www.w3.org/2000/svg\\" {...props}>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
)

export default SvgFile

"
`;

exports[`cli should work with stdin 1`] = `
"import * as React from 'react'

const SvgComponent = (props) => (
  <svg width={48} height={1} xmlns=\\"http://www.w3.org/2000/svg\\" {...props}>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
)

export default SvgComponent

"
`;

exports[`cli using typescript option, it creates index with \`.ts\` extension 1`] = `
"export { default as File } from './File'
"
`;
